fix z-index header, css for all text selection

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,12 @@ body {
   color: #717171;
 }
 
+/* css cho text bị selection */
+::selection {
+  background-color: #ec7532;
+  color: white;
+}
+
 body > section {
   padding: 75px 0;
 }
@@ -115,6 +121,8 @@ Như vậy sẽ giữ underline và border trùng nhau và kéo dài hết nav i
 #headerFixed {
   position: fixed;
   top: 0;
+  /* đè lên z-index 15 cao nhất của carousel  */
+  z-index: 16;
 
   background-color: #101010;
   /* 
@@ -691,4 +699,22 @@ cách này sẽ khiến date rớt chữ, canh khác
 
 .movieList__item:hover .movieList__overlay {
   opacity: 0;
+}
+
+/* NOTE CONTACT */
+.contact__content {
+  text-align: center;
+}
+
+.contact__content p:first-child {
+  color: #4a4a4a;
+  font-size: 23px;
+  letter-spacing: 1px;
+  font-weight: 300;
+}
+
+.contact__content a {
+  font-size: 46px;
+  color: #fbbd61;
+  text-decoration: none;
 }
